<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.pagerFragments.Onboarding3Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"

        android:padding="24dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/imageView_onboarding1"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView_onboarding3_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/figtree_bold"
            android:text="@string/onboarding_title_3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_onboarding3_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/onboarding_desc_3"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_onboarding_finish"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:fontFamily="@font/figtree_bold"
        android:text="@string/onboarding_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_onboarding_back"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:fontFamily="@font/figtree_bold"
        android:text="@string/onboarding_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>