<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".onboarding.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <TextView
                android:id="@+id/textView_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/figtree_bold"
                android:text="@string/login_title"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textView_login_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/figtree_medium"
                android:text="@string/login_subtitle"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

        <View
            android:id="@+id/imageView_onboarding1"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/figtree_medium"
                    android:text="@string/login_username"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/et_login_username"
                    style="@style/BaseInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints="username"
                    android:background="@drawable/bordered_input"
                    android:hint="@string/login_username_hint"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/figtree_medium"
                    android:text="@string/login_password"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_login_password"
                    style="@style/BaseInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints="password"
                    android:background="@drawable/bordered_input"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword" />
            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:orientation="vertical">-->

            <!--                <TextView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:fontFamily="@font/figtree_medium"-->
            <!--                    android:text="@string/login_password"-->
            <!--                    android:textColor="@color/black"-->
            <!--                    android:textSize="14sp" />-->

            <!--                <com.google.android.material.textfield.TextInputLayout-->
            <!--                    style="@style/OutlinedRoundedCornersInput"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content">-->

            <!--                    <com.google.android.material.textfield.TextInputEditText-->
            <!--                        style="@style/OutlinedRoundedCornersInput"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="40dp"-->
            <!--                        android:hint="@string/login_password_hint"-->
            <!--                        android:inputType="textPassword" />-->

            <!--                </com.google.android.material.textfield.TextInputLayout>-->
            <!--            </LinearLayout>-->

            <Button
                android:id="@+id/btn_login"
                style="@style/BaseButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/figtree_bold"
                android:text="@string/login_btn"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/figtree_medium"
                    android:text="@string/login_register_text"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView_login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:fontFamily="@font/figtree_bold"
                    android:text="@string/login_register_daftar"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>